# UMassCTF-2025-Release

crypto/BuRGerCode/: Dockerfile  docker-compose.yaml  info.yaml  server.py  solve.py
crypto/brainrot-gamba/: Dockerfile  docker-compose.yaml  flag.txt  info.yaml
crypto/disordered-tree/: info.yaml
crypto/hotandheavy/: Dockerfile  chall.sage  docker-compose.yaml  flag.txt  info.yaml
crypto/lazy-streamer/: info.yaml
crypto/xorsa/: info.yaml
forensics/NoUpdates/: info.yaml
forensics/RealForensics/: info.yaml
forensics/macrotrace/: info.yaml
hardware/fcsign/: .gitignore  Dockerfile  README.md  config.env  docker-compose.yaml  info.yaml
hardware/flash/: Dockerfile  docker-compose.yaml  info.yaml
hardware/flash/sim/: CMakeLists.txt
hardware/flash/sim/include/: custom_i2c_eeprom.h  sim.h  uart.h  utils.h
hardware/flash/sim/lib/simavr/include/simavr/: sim_core_config.h  sim_core_decl.h
hardware/flash/sim/lib/simavr/lib/: libsimavr.so.1
hardware/flash/sim/lib/simavr/lib/pkgconfig/: simavr-avr.pc  simavr.pc
hardware/flash/sim/src/: custom_i2c_eeprom.c  main.c  sim.c  uart.c  utils.c
hardware/ir-fan/: info.yaml
misc/oddoneout/: info.yaml
misc/pandora/: info.yaml  solve.py
misc/theLEG/: Dockerfile  docker-compose.yml  info.yaml
misc/tower-signal/: info.yaml
osint/attack-of-the-pentium-4/: attack-of-the-pentium-4.md  info.yaml
osint/multiplayer/: info.yaml  multiplayer.md
pwn/: riscy.txt
pwn/calculator/: Dockerfile  docker-compose.yml  info.yaml  solve.py
pwn/clue/: clue.py  docker-compose.yaml  info.yaml
pwn/fact/: Dockerfile  (+4 more)
(+90 files in other folders)
